--- a/app/template/css/style.css
+++ b/app/template/css/style.css
@@ -118,6 +118,10 @@ a {
   z-index: 10;
 }
 
+.overlay.isActive {
+  display: block;
+}
+
 .container {
   width: 100%;
   max-width: 1204px;
@@ -150,6 +154,13 @@ a {
   padding: 13px 60px;
 }
 
+@media screen and (max-width: 1075px) {
+  .classic-button {
+    font-size: 13px;
+    padding: 9px 23px;
+  }
+}
+
 .green-text {
   color: #009876;
   font-size: 15px;
@@ -157,172 +168,21 @@ a {
   letter-spacing: 0.38px;
 }
 
-.text-input {
-  width: 100%;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 26px;
-  border: 1px solid #cef6ff;
-  background-color: #ffffff;
-  padding: 10px 21px;
-}
-
-.text-input::-webkit-input-placeholder {
-  font-size: inherit;
-  line-height: inherit;
-}
-
-.text-input:-moz-placeholder {
-  font-size: inherit;
-  line-height: inherit;
-}
-
-.text-input::-moz-placeholder {
-  font-size: inherit;
-  line-height: inherit;
-}
-
-.text-input:-ms-input-placeholder {
-  font-size: inherit;
-  line-height: inherit;
-}
-
-.text-select {
-  width: 100%;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 26px;
-  border: 1px solid #cef6ff;
-  background-color: #ffffff;
-  padding: 10px 21px;
-  -webkit-appearance: menulist;
-}
-
-.text-area {
-  width: 100%;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 17px;
-  border: 1px solid #cef6ff;
-  background-color: #ffffff;
-  padding: 10px 21px;
-  resize: vertical;
-}
-
-.text-area::-webkit-input-placeholder {
-  font-size: inherit;
-  line-height: inherit;
-}
-
-.text-area:-moz-placeholder {
-  font-size: inherit;
-  line-height: inherit;
-}
-
-.text-area::-moz-placeholder {
-  font-size: inherit;
-  line-height: inherit;
-}
-
-.text-area:-ms-input-placeholder {
-  font-size: inherit;
-  line-height: inherit;
-}
-
-.checkbox {
-  display: -ms-flex;
-  display: flex;
-  align-items: center;
-  margin: 20px 0;
-  cursor: pointer;
-}
-
-.checkbox__box:checked + .checkbox__span::after {
-  width: 14px;
-}
-
-.checkbox__box:checked + .checkbox__span::before {
-  width: 7px;
-}
-
-.checkbox__box {
-  line-height: 0;
-  font-size: 0;
-  position: absolute;
-  visibility: hidden;
-  opacity: 0;
-}
-
-.checkbox__text {
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 18px;
-}
-
-.checkbox__text a {
-  color: inherit;
-  font-size: inherit;
-  line-height: inherit;
-  letter-spacing: inherit;
-}
-
-.checkbox__text a:hover {
-  text-decoration: underline;
-}
-
-@media screen and (max-width: 1180px) {
-  .checkbox__text {
-    line-height: 24px;
+@media screen and (max-width: 1075px) {
+  .green-text {
+    font-size: 13px;
   }
-}
-
-.checkbox__span {
-  width: 18px;
-  height: 18px;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 18px;
-  background-color: transparent;
-  border: 1px solid black;
-  border-radius: 50%;
-  display: block;
-  flex-shrink: 0;
-  margin-right: 5px;
-}
-
-.checkbox__span::before {
-  content: '';
-  width: 0;
-  height: 2px;
-  background-color: black;
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: 6px;
-  border-radius: 5px;
-  -webkit-transform: translate(-50%, -50%) rotate(45deg);
-  transform: translate(-50%, -50%) rotate(45deg);
-  transition: 0.6s;
-}
-
-.checkbox__span::after {
-  content: '';
-  width: 0;
-  height: 2px;
-  background-color: black;
-  display: block;
-  position: absolute;
-  top: 35%;
-  right: 3px;
-  border-radius: 5px;
-  -webkit-transform: translate(50%, -50%) rotate(-45deg);
-  transform: translate(50%, -50%) rotate(-45deg);
-  transition: 0.6s;
 }
 
 .header__top {
   background-color: #232323;
   padding: 22px 0px 27px;
+}
+
+@media screen and (max-width: 610px) {
+  .header__top {
+    padding: 9px 0px 6px;
+  }
 }
 
 .header__top span:not(.green-text) {
@@ -333,11 +193,90 @@ a {
   margin-top: 8px;
 }
 
+@media screen and (max-width: 1075px) {
+  .header__top span:not(.green-text) {
+    font-size: 11px;
+  }
+}
+
 .header__wrap {
   display: -ms-flex;
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.header__wrap_column {
+  flex-direction: column;
+}
+
+@media screen and (max-width: 610px) {
+  .header__wrap_column {
+    align-items: flex-start;
+  }
+}
+
+.header__image {
+  flex-shrink: 0;
+}
+
+.header__center {
+  display: -ms-flex;
+  display: flex;
+  justify-content: space-between;
+  flex-grow: 0.2;
+}
+
+@media screen and (max-width: 775px) {
+  .header__center {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 610px) {
+  .header__center {
+    display: none;
+  }
+}
+
+.header__feature {
+  color: #222222;
+  font-size: 17px;
+  letter-spacing: 0.42px;
+  padding-left: 39px;
+  margin-left: 39px;
+}
+
+@media screen and (max-width: 775px) {
+  .header__feature {
+    padding-left: 17px;
+    margin-left: 17px;
+  }
+}
+
+@media screen and (max-width: 610px) {
+  .header__feature {
+    font-size: 15px;
+  }
+}
+
+.header__feature::before {
+  content: '';
+  width: 10px;
+  height: 10px;
+  background-color: #1bc09b;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: -5px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+@media screen and (max-width: 775px) {
+  .header__feature::before {
+    top: 9px;
+  }
 }
 
 .header__contacts {
@@ -346,21 +285,98 @@ a {
   align-items: center;
 }
 
+@media screen and (max-width: 610px) {
+  .header__contacts {
+    display: none;
+  }
+}
+
 .header__right {
   display: -ms-flex;
   display: flex;
   flex-direction: column;
 }
 
+@media screen and (max-width: 610px) {
+  .header__bottom {
+    width: 400px;
+    height: 100%;
+    max-width: 100vw;
+    max-height: 100vh;
+    position: fixed;
+    top: 0;
+    right: -400px;
+    background: white;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+    z-index: 11;
+    transition: .5s;
+  }
+  .header__bottom.isActive {
+    right: 0;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .header__bottom {
+    width: 100%;
+    right: -100%;
+  }
+}
+
+.header__hidden {
+  display: none;
+}
+
+@media screen and (max-width: 610px) {
+  .header__hidden {
+    display: block;
+  }
+  .header__hidden .header__contacts,
+  .header__hidden .header__center {
+    display: -ms-flex;
+    display: flex;
+  }
+}
+
 .header__left {
   margin-right: 22px;
+}
+
+@media screen and (max-width: 1075px) {
+  .header__left {
+    margin-right: 8px;
+  }
+}
+
+.header__features {
+  display: -ms-flex;
+  display: flex;
+  align-items: center;
+  margin-top: 129px;
+}
+
+@media screen and (max-width: 775px) {
+  .header__features {
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    margin-top: 70px;
+  }
+}
+
+@media screen and (max-width: 610px) {
+  .header__features {
+    text-align: left;
+    margin-top: 15px;
+  }
 }
 
 .header__mobile {
   display: none;
 }
 
-@media screen and (max-width: 775px) {
+@media screen and (max-width: 610px) {
   .header__mobile {
     width: 47px;
     height: 30px;
@@ -375,14 +391,14 @@ a {
     z-index: 12;
   }
   .header__mobile:hover span {
-    background: #510716;
+    background: #0e6753;
   }
   .header__mobile span {
     display: block;
     position: absolute;
     height: 4px;
     width: 50%;
-    background: #ae102f;
+    background: #1bc09b;
     opacity: 1;
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
@@ -391,10 +407,12 @@ a {
   .header__mobile span:nth-child(even) {
     left: 50%;
     border-radius: 0 9px 9px 0;
+    margin-top: 0;
   }
   .header__mobile span:nth-child(odd) {
     left: 0;
     border-radius: 9px 0 0 9px;
+    margin-top: 0;
   }
   .header__mobile span:nth-child(1), .header__mobile span:nth-child(2) {
     top: 10%;
@@ -451,187 +469,82 @@ a {
   }
 }
 
-body .content h2,
-body .content h1 {
-  font-size: 60px;
-  font-weight: 700;
-  line-height: 72px;
-}
-
-@media screen and (max-width: 1140px) {
-  body .content h2,
-  body .content h1 {
-    font-size: 40px;
-    line-height: 55px;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  body .content h2,
-  body .content h1 {
-    font-size: 30px;
-    line-height: 40px;
-  }
-}
-
-body .content p {
-  font-size: 14px;
-  line-height: 30px;
-}
-
-@media screen and (max-width: 600px) {
-  body .content p {
-    line-height: 22px;
-  }
-}
-
-@media screen and (max-width: 775px) {
-  .navigation {
-    width: 450px;
-    height: 100%;
-    max-height: 100vh;
-    background: white;
-    position: fixed;
-    top: 0;
-    overflow: auto;
-    transition: .5s;
-    padding: 60px 0px 60px;
-  }
-}
-
-@media screen and (max-width: 479px) {
-  .navigation {
-    width: 100%;
-    max-width: 100vw;
-  }
+.navigation {
+  width: 100%;
 }
 
 .navigation__list {
   display: -ms-flex;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   list-style-type: none;
-  margin: 0;
+  justify-content: space-between;
   padding: 0;
+  margin: 0;
+  margin-top: 69px;
 }
 
 @media screen and (max-width: 775px) {
+  .navigation__list {
+    margin-top: 25px;
+  }
+}
+
+@media screen and (max-width: 610px) {
   .navigation__list {
     flex-direction: column;
   }
 }
 
 .navigation__item {
-  transition: .3s;
+  display: -ms-flex;
+  display: flex;
+  flex-direction: column;
 }
 
-.navigation__item_active .navigation__link {
-  color: #ae102f;
-  border-bottom-color: #ae102f;
-  padding: 14px 0px;
-  margin: 0 30px;
-}
-
-.navigation__item_opened {
-  background: white;
-}
-
-.navigation__item_opened .navigation__link {
-  border-color: #cef6ff;
-}
-
-@media screen and (max-width: 775px) {
-  .navigation__item_opened .navigation__link {
-    border-color: transparent;
+@media screen and (max-width: 610px) {
+  .navigation__item {
+    margin: 10px 0;
   }
-}
-
-.navigation__item:first-child .navigation__link {
-  color: white;
-  background-color: #ae102f;
 }
 
 .navigation__link {
-  color: #000000;
-  font-size: 14px;
+  color: #232323;
+  font-size: 17px;
   font-weight: 700;
-  line-height: 24px;
-  transition: .3s;
-  letter-spacing: 1.4px;
-  border: 1px solid transparent;
+  letter-spacing: 0.42px;
   display: block;
-  padding: 14px 30px;
+  transition: .3s;
 }
 
-@media screen and (max-width: 1368px) {
+@media screen and (max-width: 775px) {
   .navigation__link {
-    padding: 11px 14px;
-  }
-}
-
-@media screen and (max-width: 920px) {
-  .navigation__link {
-    font-size: 13px;
-    padding: 8px 7px;
+    font-size: 15px;
   }
 }
 
 .navigation__link:hover {
-  color: #ae102f;
+  color: #1bc09b;
 }
 
-.navigation__sublink {
-  color: #000000;
-  text-align: center;
-  font-size: 14px;
-  line-height: 30px;
-  display: block;
-  border: 1px solid #cef6ff;
-  border-top-color: transparent;
-  padding: 11px 5px;
-  transition: .3s;
-}
-
-@media screen and (max-width: 920px) {
-  .navigation__sublink {
-    padding: 8px 3px;
-  }
-}
-
-@media screen and (max-width: 775px) {
-  .navigation__sublink {
-    border-color: transparent;
-  }
-}
-
-.navigation__sublink:hover {
-  color: #ae102f;
-}
-
-.navigation__sublist {
-  width: 100%;
-  list-style-type: none;
-  display: -ms-flex;
-  display: flex;
-  flex-direction: column;
-  background: white;
+.navigation__additional {
+  color: #232323;
+  font-size: 12px;
+  font-weight: 400;
+  letter-spacing: 0.3px;
   position: absolute;
-  top: 100%;
-  left: 0;
-  padding: 0;
-  margin: 0;
-  opacity: 0;
-  pointer-events: none;
-  transition: .3s;
-}
-
-.navigation__sublist_opened {
-  opacity: 1;
-  pointer-events: all;
+  top: calc(100% + 14px);
 }
 
 @media screen and (max-width: 775px) {
-  .navigation__sublist_opened {
+  .navigation__additional {
+    top: calc(100% + 7px);
+    font-size: 11px;
+  }
+}
+
+@media screen and (max-width: 610px) {
+  .navigation__additional {
     position: relative;
     top: auto;
   }
