--- a/app/template/sass/layout/_header.scss
+++ b/app/template/sass/layout/_header.scss
@@ -1,13 +1,22 @@
 .header {
+	$parent: &;
 	&__top {
 		background-color: #232323;
 		padding: 22px 0px 27px;
+		@include adaptive (610) {
+	    padding: 9px 0px 6px;
+		}
+
+
 		& span:not(.green-text) {
 			color: #ffffff;
 			font-size: 12px;
 			font-weight: 500;
 			letter-spacing: 0.3px;
 			margin-top: 8px;
+			@include adaptive (1075) {
+				font-size: 11px;
+			}
 		}
 	}
 	&__wrap {
@@ -16,12 +25,65 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
+		&_column {
+			flex-direction: column;
+			@include adaptive (610) {
+				align-items: flex-start;
+			}
+		}
+	}
+	&__image {
+		flex-shrink: 0;
+	}
+	&__center {
+		display: -webkit-flex;
+		display: -ms-flex;
+		display: flex;
+		justify-content: space-between;
+		flex-grow: 0.2;
+		@include adaptive (775) {
+			flex-direction: column;
+		}
+		@include adaptive (610) {
+			display: none;
+		}
+	}
+	&__feature {
+		color: #222222;
+		font-size: 17px;
+		letter-spacing: 0.42px;
+		padding-left: 39px;
+		margin-left: 39px;
+		@include adaptive (775) {
+			padding-left: 17px;
+			margin-left: 17px;
+		}
+		@include adaptive (610) {
+			font-size: 15px;
+		}
+		&::before {
+			content: '';
+			width: 10px;
+			height: 10px;
+			background-color: #1bc09b;
+			border-radius: 50%;
+			position: absolute;
+			top: 50%;
+			left: -5px;
+			transform: translateY(-50%);
+			@include adaptive (775) {
+		    top: 9px;
+			}
+		}
 	}
 	&__contacts {
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
 		align-items: center;
+		@include adaptive (610) {
+			display: none;
+		}
 	}
 	&__right {
 		display: -webkit-flex;
@@ -29,12 +91,67 @@
 		display: flex;
 		flex-direction: column;
 	}
+	&__bottom {
+		@include adaptive (610) {
+			width: 400px;
+			height: 100%;
+			max-width: 100vw;
+			max-height: 100vh;
+			position: fixed;
+			top: 0;
+			right: -400px;
+			background: white;
+			overflow: auto;
+			-webkit-overflow-scrolling: touch;
+			z-index: 11;
+			transition: .5s;
+			&.isActive {
+				right: 0;
+			}
+		}
+		@include phone {
+			width: 100%;
+			right: -100%;
+		}
+	}
+	&__hidden {
+		display: none;
+		@include adaptive (610) {
+			display: block;
+			& #{$parent}__contacts,
+			& #{$parent}__center {
+				display: -webkit-flex;
+				display: -ms-flex;
+				display: flex;
+			}
+		}
+	}
 	&__left {
 		margin-right: 22px;
+		@include adaptive (1075) {
+			margin-right: 8px;
+		}
+	}
+	&__features {
+		display: -webkit-flex;
+		display: -ms-flex;
+		display: flex;
+		align-items: center;
+		margin-top: 129px;
+		@include adaptive (775) {
+			align-items: center;
+			text-align: center;
+			flex-direction: column;
+			margin-top: 70px;
+		}
+		@include adaptive (610) {
+			text-align: left;
+			margin-top: 15px;
+		}
 	}
   &__mobile {
     display: none;
-    @include adaptive (775) {
+    @include adaptive (610) {
       width: 47px;
       height: 30px;
       display: block;
@@ -50,14 +167,14 @@
       cursor: pointer;
       z-index: 12;
       &:hover span {
-        background: darken(#ae102f, 20%);
+        background: darken(#1bc09b, 20%);
       }
       & span {
         display: block;
         position: absolute;
         height: 4px;
         width: 50%;
-        background: #ae102f;
+        background: #1bc09b;
         opacity: 1;
         -webkit-transform: rotate(0deg);
         -ms-transform: rotate(0deg);
@@ -66,14 +183,17 @@
         -o-transition: 0.25s ease-in-out;
         transition: 0.25s ease-in-out;
 
+
         &:nth-child(even) {
           left: 50%;
           border-radius: 0 9px 9px 0;
+					margin-top: 0;
         }
 
         &:nth-child(odd) {
           left: 0;
           border-radius: 9px 0 0 9px;
+					margin-top: 0;
         }
 
         &:nth-child(1),
