--- a/app/template/sass/sections/_navigation.scss
+++ b/app/template/sass/sections/_navigation.scss
@@ -1,126 +1,60 @@
 .navigation {
-  $parent: &;
-  @include adaptive (775) {
-    width: 450px;
-    height: 100%;
-    max-height: 100vh;
-    background: white;
-    position: fixed;
-    top: 0;
-    overflow: auto;
-    transition: .5s;
-    padding: 60px 0px 60px;
-  }
-  @include phone {
-    width: 100%;
-    max-width: 100vw;
-  }
+  width: 100%;
   &__list {
     display: -webkit-flex;
     display: -ms-flex;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     list-style-type: none;
-    margin: 0;
+    justify-content: space-between;
     padding: 0;
+    margin: 0;
+    margin-top: 69px;
     @include adaptive (775) {
+      margin-top: 25px;
+    }
+    @include adaptive (610) {
       flex-direction: column;
-
-
     }
   }
   &__item {
-    transition: .3s;
-    &_active {
-      & #{$parent}__link {
-        color: #ae102f;
-        border-bottom-color: #ae102f;
-        padding: 14px 0px;
-        margin: 0 30px;
-      }
-    }
-    &_opened {
-      background: white;
-     & #{$parent}__link {
-       border-color: #cef6ff;
-       @include adaptive (775) {
-         border-color: transparent;
-       }
-     }
-    }
-  }
-  &__item:first-child {
-    & #{$parent}__link {
-      color: white;
-      background-color: #ae102f;
-    }
-  }
-  &__link {
-    color: #000000;
-    font-size: 14px;
-    font-weight: 700;
-    line-height: 24px;
-    transition: .3s;
-    letter-spacing: 1.4px;
-    border: 1px solid transparent;
-    display: block;
-  	padding: 14px 30px;
-    @include adaptive (1368) {
-      padding: 11px 14px;
-    }
-    @include adaptive (920) {
-      font-size: 13px;
-      padding: 8px 7px;
-    }
-    &:hover {
-      color: #ae102f;
-    }
-  }
-  &__sublink {
-    color: #000000;
-    text-align: center;
-    font-size: 14px;
-    line-height: 30px;
-    display: block;
-    border: 1px solid #cef6ff;
-    border-top-color: transparent;
-    padding: 11px 5px;
-    transition: .3s;
-    @include adaptive (920) {
-      padding: 8px 3px;
-    }
-    @include adaptive (775) {
-      border-color: transparent;
-    }
-
-    &:hover {
-      color: #ae102f;
-    }
-  }
-  &__sublist {
-    width: 100%;
-    list-style-type: none;
     display: -webkit-flex;
     display: -ms-flex;
     display: flex;
     flex-direction: column;
-    background: white;
-    position: absolute;
-
-    top: 100%;
-    left: 0;
-    padding: 0;
-    margin: 0;
-    opacity: 0;
-    pointer-events: none;
+    @include adaptive (610) {
+      margin: 10px 0;
+    }
+  }
+  &__link {
+    color: #232323;
+    font-size: 17px;
+    font-weight: 700;
+    letter-spacing: 0.42px;
+    display: block;
     transition: .3s;
-    &_opened {
-      opacity: 1;
-      pointer-events: all;
-      @include adaptive (775) {
-        position: relative;
-        top: auto;
-      }
+    @include adaptive (775) {
+      font-size: 15px;
+
+    }
+    &:hover {
+      color: #1bc09b;
+    }
+  }
+  &__additional {
+    color: #232323;
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: 0.3px;
+    position: absolute;
+    top: calc(100% + 14px);
+    @include adaptive (775) {
+      top: calc(100% + 7px);
+      font-size: 11px;
+    }
+    @include adaptive (610) {
+      position: relative;
+      top: auto;
     }
   }
 }
