--- a/app/template/css/style.css
+++ b/app/template/css/style.css
@@ -130,11 +130,208 @@ a {
 }
 
 .container_big {
-  max-width: 1794px;
+  max-width: 1310px;
 }
 
 .container_full {
   max-width: 1950px;
+}
+
+@-webkit-keyframes rota {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes rota {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes mask {
+  0% {
+    opacity: 1;
+  }
+  50%, 100% {
+    opacity: 0;
+  }
+}
+
+@keyframes mask {
+  0% {
+    opacity: 1;
+  }
+  50%, 100% {
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes fill {
+  0% {
+    opacity: 0;
+  }
+  50%, 100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fill {
+  0% {
+    opacity: 0;
+  }
+  50%, 100% {
+    opacity: 1;
+  }
+}
+
+.slider-controls {
+  width: 100%;
+  display: -ms-flex;
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  padding-top: 35px;
+  z-index: 2;
+}
+
+@media screen and (max-width: 1075px) {
+  .slider-controls {
+    width: calc(100% - 20px);
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    padding-top: 10px;
+  }
+}
+
+.slider-controls .slider-right {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+@media screen and (max-width: 610px) {
+  .slider-controls .slider-control {
+    width: 50px;
+    height: 20px;
+    display: -ms-flex;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .slider-controls .slider-control img {
+    -o-object-fit: contain;
+       object-fit: contain;
+    display: block;
+    max-height: 100%;
+  }
+}
+
+.swiper-pagination {
+  text-align: unset !important;
+  background: transparent;
+  display: -ms-flex;
+  display: flex;
+  align-items: center;
+  top: 100%;
+  left: 50%;
+  -webkit-transform: translateX(-50%) !important;
+          transform: translateX(-50%) !important;
+  padding-top: 35px;
+}
+
+@media screen and (max-width: 1075px) {
+  .swiper-pagination {
+    padding-top: 10px;
+  }
+}
+
+.swiper-pagination-bullet {
+  width: 12px !important;
+  height: 12px !important;
+  background: #1bc09b !important;
+  flex-shrink: 0;
+  margin: 0px 5px;
+}
+
+.swiper-pagination-bullet:not(.swiper-pagination-bullet-active) {
+  opacity: 1 !important;
+}
+
+.swiper-pagination-bullet:not(.swiper-pagination-bullet-active)::before {
+  content: '';
+  width: 6px;
+  height: 6px;
+  background: white;
+  opacity: 1;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  transition: .3s;
+}
+
+.swiper-pagination-bullet-active {
+  background: #1bc09b !important;
+}
+
+.swiper-pagination-bullet-active::before {
+  opacity: 0;
+}
+
+.swiper-pagination-bullet-active .slider-bullet__pie {
+  width: 50%;
+  height: 100%;
+  -webkit-transform-origin: 100% 50%;
+          transform-origin: 100% 50%;
+  position: absolute;
+  background: white;
+}
+
+.swiper-pagination-bullet-active .slider-bullet__pie_spinner {
+  border-radius: 100% 0 0 100%/50% 0 0 50%;
+  z-index: 200;
+  border-right: none;
+  -webkit-animation: rota 6s linear infinite;
+          animation: rota 6s linear infinite;
+}
+
+.swiper-pagination-bullet-active .slider-bullet__pie_filler {
+  border-radius: 0 100% 100% 0/0 50% 50% 0;
+  left: 50%;
+  opacity: 0;
+  z-index: 100;
+  -webkit-animation: fill 6s steps(1, end) infinite;
+          animation: fill 6s steps(1, end) infinite;
+  border-left: none;
+}
+
+.swiper-pagination-bullet-active .slider-bullet__mask {
+  width: 50%;
+  height: 100%;
+  border-radius: 100% 0 0 100%/50% 0 0 50%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background: inherit;
+  opacity: 1;
+  z-index: 300;
+  -webkit-animation: mask 6s steps(1, end) infinite;
+          animation: mask 6s steps(1, end) infinite;
 }
 
 .classic-button {
@@ -171,6 +368,22 @@ a {
 @media screen and (max-width: 1075px) {
   .green-text {
     font-size: 13px;
+  }
+}
+
+.header {
+  padding-bottom: 127px;
+}
+
+@media screen and (max-width: 1075px) {
+  .header {
+    padding-bottom: 40px;
+  }
+}
+
+@media screen and (max-width: 610px) {
+  .header {
+    padding-bottom: 20px;
   }
 }
 
@@ -467,6 +680,120 @@ a {
     left: 100%;
     opacity: 0;
   }
+}
+
+.catalog-slider {
+  margin-top: 139px;
+}
+
+.catalog-slider__item {
+  display: -ms-flex;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.catalog-slider__wrapper {
+  max-width: 620px;
+  margin-right: auto !important;
+  margin-left: 0 !important;
+  margin-top: 56px !important;
+}
+
+.catalog-slider__block {
+  border-radius: 50%;
+  overflow: hidden;
+  margin-top: -80px;
+}
+
+.catalog-slider__block::before {
+  content: '';
+  width: 200%;
+  height: 200%;
+  opacity: 0.8;
+  background-color: #1bc09b;
+  border-radius: 50%;
+  position: absolute;
+  top: 30%;
+  left: 60%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 2;
+  transition: .5s;
+}
+
+.catalog-slider__block:hover::before {
+  width: 0%;
+  height: 0%;
+}
+
+.catalog-slider__picture {
+  max-width: 347px;
+  width: 100%;
+  max-height: 347px;
+  border-radius: 50%;
+  overflow: hidden;
+  flex-shrink: 0;
+  display: -ms-flex;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.catalog-slider__picture img {
+  display: block;
+  max-height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.catalog-slider__name {
+  color: #ffffff;
+  font-size: 33px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 1.65px;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 3;
+}
+
+.index-slider {
+  margin-bottom: 65px;
+}
+
+.custom-title {
+  display: -ms-flex;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.custom-title span {
+  color: #232323;
+  font-size: 67px;
+  font-weight: 700;
+  line-height: 82.01px;
+  text-transform: uppercase;
+  letter-spacing: 3.35px;
+}
+
+.custom-title span:last-child::before {
+  content: '';
+  width: 94px;
+  height: 92px;
+  background-image: url("../img/house-full.png");
+  background-size: contain;
+  position: absolute;
+  right: 0;
+  top: 45%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  z-index: -1;
 }
 
 .navigation {
