--- a/app/template/sass/main.scss
+++ b/app/template/sass/main.scss
@@ -8,6 +8,8 @@
 @import "components/input";
 
 @import "layout/header";
+@import "layout/catalog-slider";
+@import "layout/index-slider";
 
 @import "sections/content";
 @import "sections/navigation";
