--- a/app/template/sass/main.scss
+++ b/app/template/sass/main.scss
@@ -10,6 +10,7 @@
 @import "layout/header";
 @import "layout/catalog-slider";
 @import "layout/index-slider";
+@import "layout/catalog";
 
 @import "sections/content";
 @import "sections/navigation";
