--- a/app/template/sass/main.scss
+++ b/app/template/sass/main.scss
@@ -11,6 +11,9 @@
 @import "layout/catalog-slider";
 @import "layout/index-slider";
 @import "layout/catalog";
+@import "layout/content-block";
+@import "layout/actions";
+@import "layout/gallery";
 
 @import "sections/content";
 @import "sections/navigation";
